data/derived/fa15/progs/unify/prog0658.ml.out
Characters 51-60:
  [n mod 1] append digitsOfInt (n/10);;
  ^^^^^^^^^
Error: This expression has type int list
       This is not a function; it cannot be applied.
